# adaptiv_server

./: CMakeLists.txt
client/: CMakeLists.txt
client/include/: json.hpp  solver.hpp  util.hpp
client/src/: main.cpp
server/: CMakeLists.txt
server/include/: http_session.hpp  listener.hpp  net.hpp  shared_state.hpp  websocket_session.hpp
server/src/: http_session.cpp  listener.cpp  main.cpp  shared_state.cpp  websocket_session.cpp
